# vecpir

./: .gitmodules  CMakeLists.txt  README.md
header/: client.h  database_constants.h  server.h
src/: main.cpp
